fix benefits module on mobile

--- a/assets/css/_benefits.scss
+++ b/assets/css/_benefits.scss
@@ -1,6 +1,6 @@
 .benefits {
   padding: $space-l 0;
-  @include sp-bot($space-xl);
+  @include sp-bot($space-l);
   
   @media (min-width: $breakpoint-1) {
     @include sp-bot($space-xxl);
@@ -8,11 +8,21 @@
 
   ul {
     display: flex;
+    flex-direction: column;
+
+    @media (min-width: $breakpoint-1) {
+      flex-direction: row;
+    }
 
     li {
+      flex-basis: 100%;
       padding: 0 $space-m;
       text-align: center;
-      flex-basis: 100%;
+      @include sp-bot($space-m);
+      
+      @media (min-width: $breakpoint-1) {
+        margin-bottom: 0;
+      }
     }
   }
 }
